fix: overflow x

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 body {
